<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <GVL Name="GVL_MotorEPS" Id="{b66f7fae-8d84-49a5-99c7-08f8b8e1d782}">
    <Declaration><![CDATA[VAR_GLOBAL
    {attribute 'pytmc' := 'pv: CRIX:DPL:MMS:X:EPS'}
    aDPL_X_EPS		: ARRAY [1 .. 3] OF ST_EPSLimits;

    {attribute 'pytmc' := 'pv: CRIX:DPL:MMS:Y:EPS'}
    aDPL_Y_EPS		: ARRAY [1 .. 2] OF ST_EPSLimits;

    {attribute 'pytmc' := 'pv: CRIX:DPL:MMS:Z:EPS'}
    aDPL_Z_EPS 	    : ARRAY [1 .. 4] OF ST_EPSLimits;

    {attribute 'pytmc' := 'pv: CRIX:RCC:MMS:Y:EPS'}
    aRCC_Y_EPS 	    : ARRAY [1 .. 4] OF ST_EPSLimits;

    {attribute 'pytmc' := 'pv: CRIX:RCC:MMS:Z:EPS'}
    aRCC_Z_EPS	    : ARRAY [1 .. 3] OF ST_EPSLimits;

    {attribute 'pytmc' := 'pv: CRIX:SDS:MMS:RY:EPS'}
    aSDS_RY_EPS 	: ARRAY [1 .. 5] OF ST_EPSLimits;

    {attribute 'pytmc' := 'pv: CRIX:SDS:MMS:Y:EPS'}
    aSDS_Y_EPS 		: ARRAY [1 .. 5] OF ST_EPSLimits;

    {attribute 'pytmc' := 'pv: CRIX:SDS:MMS:ZENC:EPS'}
    aSDS_Z_ENC_EPS	: ARRAY [1 .. 6] OF ST_EPSLimits;

END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>