<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="PRG_RCC_Y_EPS" Id="{a9280473-354b-4286-b24d-a3e00c25baca}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM PRG_RCC_Y_EPS
VAR
    bInit 		: BOOL := TRUE;
    aEPS 	    : ARRAY [1 ... 4] OF ST_EPSLimits;

    nIndex 		: UINT;
    nEPSIndex 	: UINT;

    pMotorDUT	: POINTER TO DUT_MotionStage;
    fbBwdEPS 	: FB_EPS;
    fbFwdEPS 	: FB_EPS;

    fRCC_Y      : REAL;
    fRCC_Z      : REAL;
    fSDS_RY     : REAL;
    fSDS_Y      : REAL;
    fSDS_Z_ENC  : REAL;
    fDPL_Z      : REAL;
    fDPL_Y      : REAL;

END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[ IF bInit THEN
    // Set Inital Values
    aEPS[1].fBwd_Limits := -38;
    aEPS[1].fFwd_Limits := 10;

    aEPS[2].fBwd_Limits := -38;
    aEPS[2].fFwd_Limits := -34;

    aEPS[3].fBwd_Limits := -38;
    aEPS[3].fFwd_Limits := -34;

    aEPS[4].fBwd_Limits := -38;
    aEPS[4].fFwd_Limits := 0; // VARIBLE

    bInit := FALSE;
END_IF

fRCC_Y      := M38.fPosition;
fRCC_Z      := M39.fPosition;
fSDS_RY     := M19.fPosition;
fSDS_Y      := M17.fPosition;
fSDS_Z_ENC  := M36.fPosition;
fDPL_Z      := M3.fPosition;
fDPL_Y      := M2.fPosition;

pMotorDUT := ADR (M38);
fbBwdEPS(eps := pMotorDut^.stEPSBackwardEnable);
fbFwdEPS(eps := pMotorDut^.stEPSForwardEnable);

aEPS[1].fbEPS.setBit(0, F_InRange(fRCC_Y, -38, 10));

aEPS[2].fbEPS.setBit(0, F_InRange(fSDS_RY, -100, -5));
aEPS[2].fbEPS.setBit(1, F_InRange(fSDS_Z_ENC, 400, 495));

aEPS[3].fbEPS.setBit(0, F_InRange(fDPL_Z, -10, 30));
aEPS[3].fbEPS.setBit(1, F_InRange(fRCC_Z, -15, 11));

aEPS[4].fbEPS.setBit(0, F_InRange(fSDS_Z_ENC, 495, 510));
aEPS[4].fbEPS.setBit(1, (fSDS_Y - fRCC_Y) >= 36);

FOR nIndex := 1 TO 4 DO
    IF aEPS[nIndex].fbEPS.eps.bEPS_OK THEN
        nEPSIndex := nIndex;
    END_IF
END_FOR

IF fDPL_Y < aEPS[nIndex].fBwd_Limits THEN
    fbBwdEPS.setBit(0, FALSE);
ELSE
    fbBwdEPS.setBit(0, TRUE);
END_IF

IF fDPL_Y > aEPS[nIndex].fFwd_Limits THEN
    fbFwdEPS.setBit(0, FALSE);
ELSE
    fbFwdEPS.setBit(0, TRUE);
END_IF]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>