<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="PRG_DPL_X_EPS" Id="{04026f9f-33ec-468b-8c87-d293a0ccda10}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM PRG_DPL_X_EPS
VAR
	bInit 		: BOOL := TRUE;
	aEPS 	    : ARRAY [1 ... 3] OF ST_EPSLimits;
	
	nIndex 		: UINT;
	nEPSIndex 	: UINT;
	
	fDPL_X 	: REAL;
	fSDS_RY 	: REAL;
	fDPL_Z 		: REAL;
	
	pMotorDUT	: POINTER TO DUT_MotionStage;
	fbBwdEPS 	: FB_EPS;
	fbFwdEPS 	: FB_EPS;

END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[IF bInit THEN
	// Set Inital Values
	aEPS[1].fBwd_Limits := -100;
	aEPS[1].fFwd_Limits := -5;

	aEPS[2].fBwd_Limits := -5; 
	aEPS[2].fFwd_Limits := 5;

	aEPS[3].fBwd_Limits := 5;	 
	aEPS[3].fFwd_Limits := -5;

	
	bInit := FALSE;
END_IF

fDPL_X  := M1.fPosition;
fSDS_RY := M19.fPosition;
fDPL_Z := M3.fPosition;

// Information about current motor
pMotorDUT := ADR (M1);
fbBwdEPS(eps := pMotorDut^.stEPSBackwardEnable);
fbFwdEPS(eps := pMotorDut^.stEPSForwardEnable);

aEPS[1].fbEPS.setBit(0, F_InRange(fDPL_X, 10, 80));
aEPS[2].fbEPS.setBit(0, F_InRange(fSDS_RY, 10, 30));
aEPS[3].fbEPS.setBit(0, F_InRange(fDPL_Z, 30, 80));

FOR nIndex := 1 TO 3 DO
    IF aEPS[nIndex].fbEPS.eps.bEPS_OK THEN
        nEPSIndex := nIndex;
    END_IF
END_FOR 

IF fDPL_X < aEPS[nIndex].fBwd_Limits THEN
	fbBwdEPS.setBit(0, FALSE);
ELSE
	fbBwdEPS.setBit(0, TRUE);
END_IF

IF fDPL_X > aEPS[nIndex].fFwd_Limits THEN
	fbFwdEPS.setBit(0, FALSE);
ELSE
	fbFwdEPS.setBit(0, TRUE);
END_IF]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>