<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="PRG_DPL_Y_EPS" Id="{f7a04ae9-83bd-4be2-b22f-d7b6b02b3657}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM PRG_DPL_Y_EPS
VAR
	bInit 		: BOOL := TRUE;
	aEPS 	    : ARRAY [1 ... 2] OF ST_EPSLimits;
	
	nIndex 		: UINT;
	nEPSIndex 	: UINT;
	
	pMotorDUT	: POINTER TO DUT_MotionStage;
	fbBwdEPS 	: FB_EPS;
	fbFwdEPS 	: FB_EPS;

    fDPL_Y      : REAL;
    fDPL_Z      : REAL;
    fRCC_Z      : REAL;

END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[IF bInit THEN
	// Set Inital Values
	aEPS[1].fBwd_Limits := -1;
	aEPS[1].fFwd_Limits := 80;

	aEPS[2].fBwd_Limits := 40; 
	aEPS[2].fFwd_Limits := 80;

	bInit := FALSE;
END_IF

fDPL_Y := M2.fPosition;
fDPL_Z := M3.fPosition;
fRCC_Z := M39.fPosition;

pMotorDUT := ADR (M2);
fbBwdEPS(eps := pMotorDut^.stEPSBackwardEnable);
fbFwdEPS(eps := pMotorDut^.stEPSForwardEnable);

aEPS[1].fbEPS.setBit(0, F_InRange(fDPL_Y, 10, 80));

aEPS[2].fbEPS.setBit(0, F_InRange(fDPL_Z, -10, 30));
aEPS[2].fbEPS.setBit(1, F_InRange(fRCC_Z, -15, 11));

FOR nIndex := 1 TO 3 DO
    IF aEPS[nIndex].fbEPS.eps.bEPS_OK THEN
        nEPSIndex := nIndex;
    END_IF
END_FOR 

IF fDPL_Y < aEPS[nIndex].fBwd_Limits THEN
	fbBwdEPS.setBit(0, FALSE);
ELSE
	fbBwdEPS.setBit(0, TRUE);
END_IF

IF fDPL_Y > aEPS[nIndex].fFwd_Limits THEN
	fbFwdEPS.setBit(0, FALSE);
ELSE
	fbFwdEPS.setBit(0, TRUE);
END_IF
]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>