<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="PRG_DPL_Z_EPS" Id="{2c285499-0d64-4304-a814-9959d7ef4cde}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM PRG_DPL_Z_EPS
VAR
	bInit 		: BOOL := TRUE;
	aEPS 	    : ARRAY [1 ... 4] OF ST_EPSLimits;
	
	nIndex 		: UINT;
	nEPSIndex 	: UINT;
	
	pMotorDUT	: POINTER TO DUT_MotionStage;
	fbBwdEPS 	: FB_EPS;
	fbFwdEPS 	: FB_EPS;

    fDPL_Z      : REAL;
    fDPL_X      : REAL;
    fRCC_Y      : REAL;
    fRCC_Z      : REAL;

END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[IF bInit THEN
	// Set Inital Values
	aEPS[1].fBwd_Limits := -10;
	aEPS[1].fFwd_Limits := 100;

	aEPS[2].fBwd_Limits := 30; 
	aEPS[2].fFwd_Limits := 100;

	aEPS[3].fBwd_Limits := 30; 
	aEPS[3].fFwd_Limits := 100;

	aEPS[4].fBwd_Limits := 30; 
	aEPS[4].fFwd_Limits := 100;

	bInit := FALSE;
END_IF

fDPL_Z := M3.fPosition;
fDPL_X := M1.fPosition;
fRCC_Y := M38.fPosition;
fRCC_Z := M39.fPosition;

pMotorDUT := ADR (M3);
fbBwdEPS(eps := pMotorDut^.stEPSBackwardEnable);
fbFwdEPS(eps := pMotorDut^.stEPSForwardEnable);

aEPS[1].fbEPS.setBit(0, F_InRange(fDPL_Z, -10, 100));

aEPS[2].fbEPS.setBit(0, F_InRange(fDPL_X, 10, 30));

aEPS[3].fbEPS.setBit(0, F_InRange(fRCC_Y, -34, 10));
aEPS[3].fbEPS.setBit(1, F_InRange(fRCC_Z, -15, 11));

aEPS[3].fbEPS.setBit(0, F_InRange(fRCC_Y, -38, -34));
aEPS[4].fbEPS.setBit(1, F_InRange(fRCC_Z, -15, 11));

FOR nIndex := 1 TO 4 DO
    IF aEPS[nIndex].fbEPS.eps.bEPS_OK THEN
        nEPSIndex := nIndex;
    END_IF
END_FOR 

IF fDPL_Z < aEPS[nIndex].fBwd_Limits THEN
	fbBwdEPS.setBit(0, FALSE);
ELSE
	fbBwdEPS.setBit(0, TRUE);
END_IF

IF fDPL_Z > aEPS[nIndex].fFwd_Limits THEN
	fbFwdEPS.setBit(0, FALSE);
ELSE
	fbFwdEPS.setBit(0, TRUE);
END_IF
]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>