<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="PRG_RCC_Z_EPS" Id="{a0722060-c50e-4a96-ac46-0b4676b08166}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM PRG_RCC_Z_EPS
VAR
	bInit 		: BOOL := TRUE;
	aEPS 	    : ARRAY [1 ... 3] OF ST_EPSLimits;
	
	nIndex 		: UINT;
	nEPSIndex 	: UINT;
	
	pMotorDUT	: POINTER TO DUT_MotionStage;
	fbBwdEPS 	: FB_EPS;
	fbFwdEPS 	: FB_EPS;

    fRCC_Z      : REAL;
    fRCC_Y      : REAL;
    fDPL_Z      : REAL;
    fDPL_Y      : REAL;

END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[IF bInit THEN
	// Set Inital Values
	aEPS[1].fBwd_Limits := -1;
	aEPS[1].fFwd_Limits := 80;

	aEPS[2].fBwd_Limits := 40; 
	aEPS[2].fFwd_Limits := 80;

	bInit := FALSE;
END_IF

pMotorDUT := ADR (M39);
fbBwdEPS(eps := pMotorDut^.stEPSBackwardEnable);
fbFwdEPS(eps := pMotorDut^.stEPSForwardEnable);

fRCC_Z := M39.fPosition;
fRCC_Y := M38.fPosition;
fDPL_Z := M3.fPosition;
fDPL_Y := M2.fPosition;

aEPS[1].fbEPS.setBit(0, F_InRange(fRCC_Z, -18, -11));

aEPS[2].fbEPS.setBit(0, F_InRange(fDPL_Z, -10, 30));
aEPS[2].fbEPS.setBit(1, F_InRange(fDPL_Y, -1, 40));

aEPS[3].fbEPS.setBit(0, F_InRange(fDPL_Z, -10, 30));
aEPS[3].fbEPS.setBit(1, F_InRange(fRCC_Y, -34, 10));

FOR nIndex := 1 TO 3 DO
    IF aEPS[nIndex].fbEPS.eps.bEPS_OK THEN
        nEPSIndex := nIndex;
    END_IF
END_FOR 

IF fRCC_Z < aEPS[nIndex].fBwd_Limits THEN
	fbBwdEPS.setBit(0, FALSE);
ELSE
	fbBwdEPS.setBit(0, TRUE);
END_IF

IF fRCC_Z > aEPS[nIndex].fFwd_Limits THEN
	fbFwdEPS.setBit(0, FALSE);
ELSE
	fbFwdEPS.setBit(0, TRUE);
END_IF]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>