<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="PRG_SDS_RY_EPS" Id="{18466759-88d2-4c0f-bc51-f9ca798237c4}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM PRG_SDS_RY_EPS
VAR
	bInit 		: BOOL := TRUE;
	aEPS 	: ARRAY [1 ... 5] OF ST_EPSLimits;
	
	nIndex 		: UINT;
	nEPSIndex 	: UINT;
	
	fSDS_Z_ENC 	: REAL;
	fSDS_RY 	: REAL;
    fSDS_Y      : REAL;
	fRCC_Y 		: REAL;
	fDPL_X 		: REAL;
	
	pMotorDUT	: POINTER TO DUT_MotionStage;
	fbBwdEPS 	: FB_EPS;
	fbFwdEPS 	: FB_EPS;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[IF bInit THEN
	// Set Inital Values
	aEPS[1].fBwd_Limits := -100;
	aEPS[1].fFwd_Limits := -5;

	aEPS[2].fBwd_Limits := -5; 
	aEPS[2].fFwd_Limits := 5;

	aEPS[3].fBwd_Limits := 5;	 
	aEPS[3].fFwd_Limits := -5;

	aEPS[4].fBwd_Limits := -100;	 
	aEPS[4].fFwd_Limits := -80;
     
	aEPS[5].fBwd_Limits := -100;
	aEPS[5].fFwd_Limits := -80;
	
	bInit := FALSE;
END_IF

fSDS_Z_ENC := M36.fPosition;
fSDS_RY := M19.fPosition;
fSDS_Y  := M17.fPosition;
fRCC_Y  := M38.fPosition;
fDPL_X  := M1.fPosition;

// Information about current motor
pMotorDUT := ADR (M39);
fbBwdEPS(eps := pMotorDut^.stEPSBackwardEnable);
fbFwdEPS(eps := pMotorDut^.stEPSForwardEnable);

// Set EPS conditions
aEPS[1].fbEPS.setBit(0, F_InRange(fSDS_Z_ENC, 400, 420));
aEPS[1].fbEPS.setBit(1, F_InRange(fSDS_Y, 30, 35));
aEPS[1].fbEPS.setBit(2, F_InRange(fRCC_Y, -38, -34));
aEPS[1].fbEPS.setBit(3, F_InRange(fDPL_X, 10, 30));

aEPS[2].fbEPS.setBit(0, F_InRange(fSDS_Z_ENC, 0, 400));

aEPS[3].fbEPS.setBit(0, F_InRange(fSDS_Z_ENC, 400, 420));
aEPS[3].fbEPS.setBit(1, F_InRange(fSDS_RY, -5, 5));
aEPS[3].fbEPS.setBit(2, TRUE); // NOT FULL RANGE COND.

aEPS[4].fbEPS.setBit(0, F_InRange(fSDS_Z_ENC, 420, 510));

aEPS[5].fbEPS.setBit(0, F_InRange(fSDS_Z_ENC, 400, 420));
aEPS[5].fbEPS.setBit(1, F_InRange(fSDS_RY, -100, -80));
aEPS[5].fbEPS.setBit(2, TRUE); // NOT FULL RANGE COND.


// Find which conition we are in
FOR nIndex := 1 TO 5 DO
	IF aEPS[nIndex].fbEPS.eps.bEPS_OK THEN
		nEPSIndex := nIndex;
	END_IF
END_FOR


// STOP the motor depeding on which condition we are in
IF fSDS_RY < aEPS[nIndex].fBwd_Limits THEN
	fbBwdEPS.setBit(0, FALSE);
ELSE
	fbBwdEPS.setBit(0, TRUE);
END_IF

IF fSDS_RY > aEPS[nIndex].fFwd_Limits THEN
	fbFwdEPS.setBit(0, FALSE);
ELSE
	fbFwdEPS.setBit(0, TRUE);
END_IF]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>