<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <POU Name="PRG_RCC_Y_EPS" Id="{a9280473-354b-4286-b24d-a3e00c25baca}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM PRG_RCC_Y_EPS
VAR
    bInit 		: BOOL := TRUE;
    nIndex 		: UINT;
    nEPSIndex 	: UINT;

    pMotorDUT	: POINTER TO DUT_MotionStage;
    fbBwdEPS 	: FB_EPS;
    fbFwdEPS 	: FB_EPS;
    fbEPS		: FB_EPS;

    fRCC_Y      : LREAL;
    fRCC_Z      : LREAL;
    fSDS_RY     : LREAL;
    fSDS_Y      : LREAL;
    fSDS_Z_ENC  : LREAL;
    fDPL_Z      : LREAL;
    fDPL_Y      : LREAL;

END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[ IF bInit THEN
    // Set Inital Values
    aRCC_Y_EPS[1].fBwd_Limits := -38;
    aRCC_Y_EPS[1].fFwd_Limits := 10;

    aRCC_Y_EPS[2].fBwd_Limits := -38;
    aRCC_Y_EPS[2].fFwd_Limits := -34;

    aRCC_Y_EPS[3].fBwd_Limits := -38;
    aRCC_Y_EPS[3].fFwd_Limits := -34;

    aRCC_Y_EPS[4].fBwd_Limits := -38;
    aRCC_Y_EPS[4].fFwd_Limits := 0; // VARIBLE

    bInit := FALSE;
END_IF

fRCC_Y      := M38.stAxisStatus.fActPosition;
fRCC_Z      := M39.stAxisStatus.fActPosition;
fSDS_RY     := M19.stAxisStatus.fActPosition;
fSDS_Y      := M17.stAxisStatus.fActPosition;
fSDS_Z_ENC  := M36.stAxisStatus.fActPosition;
fDPL_Z      := M3.stAxisStatus.fActPosition;
fDPL_Y      := M2.stAxisStatus.fActPosition;

pMotorDUT := ADR (M38);
fbBwdEPS(eps := pMotorDut^.stEPSBackwardEnable);
fbFwdEPS(eps := pMotorDut^.stEPSForwardEnable);

fbEPS(eps:=aRCC_Y_EPS[1].stEPS);
fbEPS.setBit(0, F_InRange(fRCC_Y, -38, 10));

fbEPS(eps:=aRCC_Y_EPS[2].stEPS);
fbEPS.setBit(0, F_InRange(fSDS_RY, -100, -5));
fbEPS.setBit(1, F_InRange(fSDS_Z_ENC, 400, 495));

fbEPS(eps:=aRCC_Y_EPS[3].stEPS);
fbEPS.setBit(0, F_InRange(fDPL_Z, -10, 30));
fbEPS.setBit(1, F_InRange(fRCC_Z, -15, 11));

fbEPS(eps:=aRCC_Y_EPS[4].stEPS);
fbEPS.setBit(0, F_InRange(fSDS_Z_ENC, 495, 510));
fbEPS.setBit(1, (fSDS_Y - fRCC_Y) >= 36);

FOR nIndex := 1 TO 4 DO
    IF aRCC_Y_EPS[PMPS.CheckBounds(nIndex, 1, 4)].stEPS.bEPS_OK THEN
        nEPSIndex := nIndex;
    END_IF
END_FOR

IF fDPL_Y > aRCC_Y_EPS[nEPSIndex].fBwd_Limits THEN
    fbBwdEPS.setBit(UINT_TO_BYTE(nEPSIndex), TRUE);
ELSE
    fbBwdEPS.setBit(UINT_TO_BYTE(nEPSIndex), FALSE);
END_IF

IF fDPL_Y < aRCC_Y_EPS[nEPSIndex].fFwd_Limits THEN
    fbFwdEPS.setBit(UINT_TO_BYTE(nEPSIndex), TRUE);
ELSE
    fbFwdEPS.setBit(UINT_TO_BYTE(nEPSIndex), FALSE);
END_IF]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>