<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <POU Name="PRG_SDS_Y_EPS" Id="{1d694921-86bf-430a-8dcf-197fd1ce1485}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM PRG_SDS_Y_EPS
VAR
    bInit 		: BOOL := TRUE;
    nIndex 		: uint;
    nEPSIndex 	: uint;

    fSDS_Z_ENC 	: LREAL;
    fSDS_RY 	: LREAL;
    fSDS_Y 		: LREAL;
    fRCC_Y 		: LREAL;

    fbEPS		: FB_EPS;

    {attribute 'pytmc' := 'pv: CRIX:SDS:MMS:Y:EPS'}
    aSDS_Y_EPS 		: ARRAY [1 .. 5] OF ST_EPSLimits;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[// SDS Y EPS
IF bInit THEN
    // Set Inital Values
    aSDS_Y_EPS[1].fBwd_Limits := 37.5;
    aSDS_Y_EPS[1].fFwd_Limits := 38.5;

    aSDS_Y_EPS[2].fBwd_Limits := 30;
    aSDS_Y_EPS[2].fFwd_Limits := 38.5;

    aSDS_Y_EPS[3].fBwd_Limits := 30;
    aSDS_Y_EPS[3].fFwd_Limits := 35;

    aSDS_Y_EPS[4].fBwd_Limits := 30;
    aSDS_Y_EPS[4].fFwd_Limits := 45;


    bInit := FALSE;
END_IF

// Encoder / position values
fSDS_Z_ENC :=  M36.stAxisStatus.fActPosition;
fSDS_RY := M19.stAxisStatus.fActPosition;
fSDS_Y  := M17.stAxisStatus.fActPosition;
fRCC_Y  := M38.stAxisStatus.fActPosition;

// Set EPS conditions
fbEPS(eps:= aSDS_Y_EPS[1].stEPS);
fbEPS.setBit(0, TRUE); // FULL RANGE

fbEPS(eps:= aSDS_Y_EPS[2].stEPS);
fbEPS.setBit(0, F_InRange(fSDS_Z_ENC, 0, 400));

fbEPS(eps:= aSDS_Y_EPS[3].stEPS);
fbEPS.setBit(0, F_InRange(fSDS_Z_ENC, 400, 420));
fbEPS.setBit(1, F_InRange(fSDS_RY, -5, 5));

fbEPS(eps:= aSDS_Y_EPS[4].stEPS);
fbEPS.setBit(0, F_InRange(fSDS_Z_ENC, 400, 495));
fbEPS.setBit(1, F_InRange(fSDS_RY, -100, -5));

fbEPS(eps:= aSDS_Y_EPS[5].stEPS);
fbEPS.setBit(0, F_InRange(fSDS_Z_ENC, 495, 510));
fbEPS.setBit(1, (fSDS_Y - fRCC_Y) >= 36);

F_CheckEPSArray(stMotor:=M17, aEPSLimits:=aSDS_Y_EPS);]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>